필드명 및 API 경로 수정