@@ -7,9 +7,12 @@ import com.onde.core.entity.accommodation.Accommodation;
 import com.onde.core.entity.accommodation.ApprovalStatus;
 import com.onde.core.repository.AccommodationRepository;
 import lombok.RequiredArgsConstructor;
+import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
 
+import java.time.temporal.ChronoUnit;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -17,26 +20,41 @@ public class AccommodationService {
     private final AccommodationRepository accommodationRepository;
 
     public AccommodationSearchResponse searchAccommodations(AccommodationSearchRequest request) {
-        List<Accommodation> accommodations = accommodationRepository.searchAccommodations(
-                ApprovalStatus.APPROVED, request.getRegion(), request.getStarRating());
-
-        if (request.getAmenities() != null && !request.getAmenities().isEmpty()) {
-            accommodations = accommodations.stream()
-                    .filter(a -> a.getAmenities().containsAll(request.getAmenities()))
-                    .toList();
+        Long days = null;
+        if (request.getCheckIn() != null && request.getCheckOut() != null) {
+            days = ChronoUnit.DAYS.between(request.getCheckIn(), request.getCheckOut());
         }
+
+        Sort sort = Sort.by(Sort.Direction.DESC, "id");
+        if ("price_asc".equals(request.getSort())) {
+            // Note: Sorting by min price across rooms/inventories is complex in JPA Sort.
+            // For now, we will sort by id as a placeholder or use rating.
+        } else if ("price_desc".equals(request.getSort())) {
+            // Placeholder
+        } else if ("rating".equals(request.getSort())) {
+            sort = Sort.by(Sort.Direction.DESC, "rating");
+        }
+
+        List<Accommodation> accommodations = accommodationRepository.searchAccommodations(
+                ApprovalStatus.APPROVED, 
+                request.getRegion(), 
+                request.getCategory(),
+                request.getCheckIn(),
+                request.getCheckOut() != null ? request.getCheckOut().minusDays(1) : null,
+                days,
+                sort);
 
         List<AccommodationListDto> listDtos = accommodations.stream()
                 .map(a -> AccommodationListDto.builder()
-                        .accommodationId(a.getAccommodationId())
+                        .id(a.getId())
                         .name(a.getName())
-                        .region(a.getRegion())
-                        .city(a.getCity())
-                        .starRating(a.getStarRating())
-                        .amenities(a.getAmenities())
+                        .category(a.getCategory())
+                        .location(a.getLocation())
+                        .thumbnailUrl(a.getThumbnailUrl())
+                        .rating(a.getRating())
                         .minPrice(100000) // Placeholder
                         .build())
-                .toList();
+                .collect(Collectors.toList());
 
         return AccommodationSearchResponse.builder()
                 .accommodations(listDtos)
